--- a/t11.md
+++ b/t11.md
@@ -1,4 +1,6 @@
-# c++ map用法
+# map
+
+## c++ unordered_map 基本用法
 
 ```c++
 #include<iostream>
@@ -41,7 +43,7 @@ int main(){
     // 查找value
     unordered_map<char, int>::iterator it = m1.begin();
     while(it != m1.end()){
-		if(it->second == 3){
+	    if(it->second == 3){
 			cout << it->first << ": " << it->second << endl;
 		}
 		it++;
@@ -53,6 +55,79 @@ int main(){
             cout << it->first << ": " << it->second << endl;
         }
     }
+    return 0;
+}
+```
+## 统计字符串出现次数
+
+> Input :  
+>    str = "geeks for geeks geeks quiz practice qa for";
+> Output : 
+>    (practice, 1)
+>    (for, 2)
+>    (qa, 1)
+>    (quiz, 1)
+>    (geeks, 3)
+
+```c++
+#include<iostream>
+#include<sstream>
+#include<string>
+#include<unordered_map>
+using namespace std;
+
+void count(string s){
+    unordered_map<string, int> m;
+    istringstream ss(s);
+    string word;
+    while(ss >> word){
+        m[word]++;
+    }
+    for(auto p=m.begin(); p!=m.end(); p++){
+        cout << p->first << ": " << p->second << endl;
+    }
+}
+
+int main(){
+    string str = "geeks for geeks geeks quiz practice qa for";
+    count(str);
+    return 0;
+}
+```
+
+## 查看两个数组是否是permutation(元素一样，顺序不一样)
+```c++
+#include<iostream>
+#include<string>
+#include<unordered_map>
+using namespace std;
+
+bool isPermutation(string s1, string s2){
+    if(s1.length() != s2.length()){
+        return false;
+    }
+    unordered_map<char,int> m1,m2;
+    for(int i=0; i<s1.length(); i++){
+        m1[s1[i]]++;
+        m2[s2[i]]++;
+    }
+    if(s1.size() != s2.size()){
+        return false;
+    }
+    for(auto p=m1.begin(); p!=m1.end(); p++){
+        if(m2[p->first] != p->second){
+            return false;
+        }
+    }
+    return true;
+}
+
+int main(){
+    string s1 = "abc";
+    string s2 = "cab";
+    string s3 = "aac";
+    cout << isPermutation(s1,s2) << endl;
+    cout << isPermutation(s1,s3) << endl;
     return 0;
 }
 ```
