--- a/t11.md
+++ b/t11.md
@@ -2,6 +2,14 @@
 
 ## c++ unordered_map 基本用法
 
+使用map创建的哈希表已经按键值进行了排序，所以序列的顺序已经不再是原始的输入顺序了。
+m.count(k);  // 返回m中键值等于k的元素的个数 0/1
+m.find(k);  // 如果m中存在按k索引的元素，则返回指向该元素的**迭代器**。如果不存在，则返回end()。
+m.erase(k);  // 删除m中键为k的元素，返回size_type类型的值，表示删除元素的个数。
+m.erase(p);  // 从m中删除迭代器p所指向的元素，p必须指向m中确实存在的元素，而且不能等于m.end()，返回void类型。
+
+
+
 ```c++
 #include<iostream>
 #include<unordered_map>
