--- a/t14.md
+++ b/t14.md
@@ -2,10 +2,25 @@
 
 `pthread_create`函数原型：
 
-```c++
+```c
 #include <pthread.h>
 extern int pthread_create (pthread_t *__restrict __newthread,
 			   const pthread_attr_t *__restrict __attr,
 			   void *(*__start_routine) (void *),
 			   void *__restrict __arg) 
 ```
+
+参数说明：
+- 第一个参数是 pthread_t* 也就是代表**线程实体的指针**
+- 第二个参数为了设置线程的属性，一般为 NULL
+- 第三个参数是线程运行时的函数，这是个**函数指针**。
+- 第四个参数也是一个指针，它是用来将数据传递进线程的运行函数
+
+线程与线程之间经常进行数据通讯，pthread_create()最后一个参数就是用来传递数据的，所以线程函数必须要有参数，例如：`void *test(void *arg){}`。但需要特别注意的是它是 void * 的，也是就是无类型指针，这样做的目的是为了保证线程能够接受任意类型的参数，到时候再强制转换就好了。
+
+`typedef unsigned long int pthread_t;`
+
+
+
+
+
