--- a/t14.md
+++ b/t14.md
@@ -4,10 +4,9 @@
 
 ```c
 #include <pthread.h>
-extern int pthread_create (pthread_t *__restrict __newthread,
-			   const pthread_attr_t *__restrict __attr,
-			   void *(*__start_routine) (void *),
-			   void *__restrict __arg) 
+extern int pthread_create(
+pthread_t* __newthread, const pthread_attr_t* __attr,
+void* (*__start_routine) (void *), void* __arg) 
 ```
 
 参数说明：
@@ -20,7 +19,9 @@ extern int pthread_create (pthread_t *__restrict __newthread,
 
 `typedef unsigned long int pthread_t;`
 
+当创建线程成功时，函数返回0。若为-1则说明创建线程失败。函数`pthread_join`用来等待一个线程的结束。一个线程的结束有两种途径，一种是函数结束了，调用它的线程也就结束了；另一种方式是通过函数`pthread_exit`来实现。
 
+和进程相比，线程的最大优点之一是数据的共享性，各个进程共享父进程处沿袭的数据段，可以方便的获得、修改数据。
 
 
 
