--- a/t18.md
+++ b/t18.md
@@ -32,6 +32,61 @@ int main()
 }
 ```
 
+```c++
+// set find count
+
+#include <iostream>
+#include <vector>
+#include <unordered_set>
+#include <algorithm>
+#include <ctime>
+
+using namespace std;
+
+int main()
+{
+    const int N = 100000;
+    std::vector<int> srce;
+    for( int i = 0 ; i < N ; ++i ){
+        srce.push_back( i % (N/2) );
+        // srce: [1 2 ... 49999]
+    }
+    
+
+    {
+        const auto start = std::clock() ;
+
+        std::vector<int> dest ;
+        std::unordered_set<int> set ;
+        for( int v : srce ) if( set.insert(v).second ) dest.push_back(v) ;
+
+        const auto end = std::clock() ;
+        std::cout << "    set O(N): " << (end-start) * 1000.0 / CLOCKS_PER_SEC << " milliseconds\n" ;
+    }
+
+    {
+        const auto start = std::clock() ;
+
+        std::vector<int> dest;
+        for( int v : srce ) if( std::find( dest.begin(), dest.end(), v ) == dest.end() ) dest.push_back(v) ;
+
+        const auto end = std::clock() ;
+        std::cout << " find O(N*N): " << (end-start) * 1000.0 / CLOCKS_PER_SEC << " milliseconds\n" ;
+    }
+
+    {
+        const auto start = std::clock() ;
+
+        std::vector<int> dest ;
+        for( int v : srce ) if( std::count( dest.begin(), dest.end(), v ) == 0 ) dest.push_back(v) ;
+        
+        const auto end = std::clock() ;
+        std::cout << "count O(N*N): " << (end-start) * 1000.0 / CLOCKS_PER_SEC << " milliseconds\n" ;
+    }
+}
+```
+
+
 ## set::insert
 
 ```c++
