--- a/t20.md
+++ b/t20.md
@@ -36,5 +36,47 @@ int f(int n){
 
 ## 案例1：斐波那契数列
 
+if(n <= 2){return 1;}
+f(n) = f(n-1) + f(n-2)
 
+## 案例2：小青蛙跳台阶
+> 一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法。
+
+求递归结束的条件，你直接把 n 压缩到很小很小就行了，因为 n 越小，我们就越容易直观着算出 f(n) 的多少，所以当 n = 1时，你知道 f(1) 为多少吧？够直观吧？即 f(1) = 1。
+
+if(n == 1){return 1;}
+
+第三要素：找出函数的等价关系式
+
+每次跳的时候，小青蛙可以跳一个台阶，也可以跳两个台阶，也就是说，每次跳的时候，小青蛙有两种跳法。
+
+第一种跳法：第一次我跳了一个台阶，那么还剩下n-1个台阶还没跳，剩下的n-1个台阶的跳法有f(n-1)种。
+
+第二种跳法：第一次跳了两个台阶，那么还剩下n-2个台阶还没，剩下的n-2个台阶的跳法有f(n-2)种。
+
+所以，小青蛙的全部跳法就是这两种跳法之和了，即 f(n) = f(n-1) + f(n-2)。至此，等价关系式就求出来了。于是写出代码：
+
+```c
+int f(int n){
+    if(n == 1){
+        return 1;
+    }
+    ruturn f(n-1) + f(n-2);
+}
+```
+大家觉得上面的代码对不对？
+
+答是不大对，当 n = 2 时，显然会有 f(2) = f(1) + f(0)。我们知道，f(0) = 0，按道理是递归结束，不用继续往下调用的，但我们上面的代码逻辑中，会继续调用 f(0) = f(-1) + f(-2)。这会导致无限调用，进入死循环。
+
+这也是我要和你们说的，关于递归结束条件是否够严谨问题，有很多人在使用递归的时候，由于结束条件不够严谨，导致出现死循环。也就是说，当我们在第二步找出了一个递归结束条件的时候，可以把结束条件写进代码，然后进行第三步，但是请注意，当我们第三步找出等价函数之后，还得再返回去第二步，根据第三步函数的调用关系，会不会出现一些漏掉的结束条件。就像上面，f(n-2)这个函数的调用，有可能出现 f(0) 的情况，导致死循环，所以我们把它补上。代码如下：
+
+```c
+int f(int n){
+    //f(0) = 0,f(1) = 1，等价于 n<=1时，f(n) = n。
+    if(n <= 1){
+        return n;
+    }
+    ruturn f(n-1) + f(n-2);
+}
+```
 
