--- a/t20.md
+++ b/t20.md
@@ -80,3 +80,21 @@ int f(int n){
 }
 ```
 
+
+## 案例3：反转单链表
+
+**reverseList(head)** 等价于： **reverseList(head.next)** + **改变一下1，2两个节点的指向**
+```java
+ public static Node reverseList(Node head){
+        if(head == null || head.next == null){
+            return head;
+        }
+        Node temp = reverseList(head.next); // 4->3->2
+        head.next.next = head; // 2->1
+        head.next = null;   // 1->null
+        return temp;
+    }
+```
+
+## 有关递归的一些优化思路
+
