--- a/t20.md
+++ b/t20.md
@@ -97,4 +97,53 @@ int f(int n){
 ```
 
 ## 有关递归的一些优化思路
+例如对于案例2那道题，f(n) = f(n-1) + f(n-2)
+递归计算的时候，重复计算了两次 f(5)，五次 f(4)。。。。
+我们用数组来保存把，把 n 作为我们的数组下标，f(n) 作为值，例如 arr[n] = f(n)。f(n) 还没有计算过的时候，我们让 arr[n] 等于一个特殊值，例如 arr[n] = -1。
+当我们要判断的时候，如果 arr[n] = -1，则证明 f(n) 没有计算过，否则， f(n) 就已经计算过了，且 f(n) = arr[n]。
+
+```c
+// 我们实现假定 arr 数组已经初始化好的了。
+int f(int n){
+    if(n <= 1){
+        return n;
+    }
+    //先判断有没计算过
+    if(arr[n] != -1){
+        //计算过，直接返回
+        return arr[n];
+    }else{
+        // 没有计算过，递归计算,并且把结果保存到 arr数组里
+        arr[n] = f(n-1) + f(n-1);
+        reutrn arr[n];
+    }
+}
+```
+
+## 动态规划（Dynamic Programming）
+
+即用动态规划能解决的问题分治策略肯定能解决，只是运行时间长了。因此，分治策略一般用来解决子问题相互对立的问题，称为标准分治，而动态规划用来解决子问题重叠的问题。
+
+「动态规划」中包含三个重要的概念：
+
+【最优子结构】
+【边界】
+【状态转移公式】
+
+在「 爬台阶问题 」中
+
+f(10) = f(9) + f(8) 是【最优子结构】
+f(1) 与 f(2) 是【边界】
+f(n) = f(n-1) + f(n-2) 【状态转移公式】
+
+最优子结构：如果问题的最优解所包含的子问题的解也是最优的，局部最优解能决定全局最优解，称之为最优子结构。
+
+「 爬台阶问题 」 只是动态规划中相对简单的问题，因为它只有一个变化维度，如果涉及多个维度的话，那么问题就变得复杂多了。
+难点就在于找出 「动态规划」中的这三个概念。
+比如「 国王和金矿问题 」。
+
+有一个国家发现了 5 座金矿，每座金矿的黄金储量不同，需要参与挖掘的工人数也不同。参与挖矿工人的总数是 10 人。每座金矿要么全挖，要么不挖，不能派出一半人挖取一半金矿。要求用程序求解出，要想得到尽可能多的黄金，应该选择挖取哪几座金矿？
+
+![](https://user-gold-cdn.xitu.io/2018/12/26/167e8d9d3e0c8a2a?imageView2/0/w/1280/h/960/ignore-error/1)
+
 
