--- a/t16.md
+++ b/t16.md
@@ -1,10 +1,8 @@
 # 进程
 
 ## 基础
-进程：程序的**一次**执行过程
-
-系统资源以进程为单位分配，如内存、文件。。。每个具有独立的地址空间
-
+进程：程序的**一次**执行过程。
+系统资源(如内存、文件等)以进程为单位分配，每个进程具有独立的地址空间
 在一个时间点，cpu只能调度给一个进程。
 
 PCB：process control block
@@ -14,27 +12,47 @@ PCB：process control block
 所有PCB的集合：进程表
 进程表的大小是固定的，操作系统地并发度（最多能并发执行多少个进程）
 
+PCB包括四大方面变量：描述，控制，资源，CPU
+1. 进程描述信息：pid(整数)，进程名，user id，进程组(父子)关系
+2. 进程控制信息：状态、优先级。。。
+3. 所拥有的资源和使用情况：虚拟地址空间状况，打开文件列表
+4. CPU现场信息（进程不运行时记录）：寄存器值，指向该进程**页表**的指针
+另一种分类方法：process, memory, file
 
-PCB：描述，控制，资源，CPU
+linux中的PCB:
+```c++
+struct task_struct {
+    pid_t pid;
+    unsigned_long flags;
+    struct list_head run_list;
+    ...
+}
+```
 
-进程描述信息：pid(整数)，进程名，user id，进程组(父子)关系
-
-进程控制信息：状态、优先级。。。
-
-所拥有的资源和使用情况：虚拟地址空间状况，打开文件列表
-
-CPU现场信息（进程不运行时记录）：寄存器值，指向该进程**页表**的指针
-
-process, memory, file
-
-struct task_struct {}
-
-可执行文件
-地址空间
-打开的文件
-。。。
+进程表例子：
+... <-> PCB1 <-> PCB2 <-> PCB3 <-> ... 
+其中一个PCB中可能包含以下内容：
+p_exec: 可执行文件（查询可执行的文件）
+p_ss: 地址空间（'段'的AVL树）
+u_finfo: 打开的文件（一个表）
+...
 
 ## 三种状态
 运行，就绪，等待/阻塞/睡眠/封锁
 running, ready(等待cpu), waiting/blocked(等待读盘结果)
+
+状态转换
+![]()
+
+
+创建，终止
+new, terminated
+
+
+五状态进程模型
+![]()
+
+每一类状态建立一个队列，队列元素为PCB
+状态改变：PCB从一个队列进入另外一个队列
+单CPU中，运行的进程只有一个，所以运行的PCB队列中只有一个元素
 
