--- a/t16.md
+++ b/t16.md
@@ -42,8 +42,13 @@ u_finfo: 打开的文件（一个表）
 running, ready(等待cpu), waiting/blocked(等待读盘结果)
 
 状态转换
-![]()
-
+```dot
+digraph G{
+    运行 -> 就绪
+    就绪 -> 等待、阻塞、睡眠、封锁
+    等待、阻塞、睡眠、封锁 -> 运行
+}
+```
 
 创建，终止
 new, terminated
