--- a/t16.md
+++ b/t16.md
@@ -37,7 +37,7 @@ p_ss: 地址空间（'段'的AVL树）
 u_finfo: 打开的文件（一个表）
 ...
 
-## 三种状态
+## 进程状态
 运行，就绪，等待/阻塞/睡眠/封锁
 running, ready(等待cpu), waiting/blocked(等待读盘结果)
 
@@ -61,3 +61,20 @@ new, terminated
 状态改变：PCB从一个队列进入另外一个队列
 单CPU中，运行的进程只有一个，所以运行的PCB队列中只有一个元素
 
+## 进程控制
+进程控制操作：完成进程状态间的转换
+进程控制操作实际上就是具有特定功能（完成进程状态间的转换）的程序，这些程序不能被中断，叫做原语。
+
+1. 进程的创建（fork, exec）
+分配pid，分配地址空间，初始化PCB，把新程序加入到就绪队列链表中
+2. 结束进程 (exit)
+回收资源（关闭打开的文件，回收分配的内存，断开网络连接）
+撤销PCB
+3. 阻塞（wait）
+处于运行状态的进程，在其运行过程中，会等待某个事件的发生（键盘的输入，等待磁盘的数据传输，等待其他进程给它发来一些消息）在这些事件没有发生的情况下，那么进程需要自己执行一个阻塞原语，使自己的状态由运行态变为阻塞态
+
+
+* fork 实际上是创建新的进程，通过复制调用进程本身来创建的，那么调用进程我们称之为父进程，也就是通过复制父进程，来创建子进程, 这是一个非常基本的进程建立过程
+* exec 这是一个系列的系统调用, 它的主要目的是, 通过用一段新的程序, 来覆盖原来的地址空间，也就是 父进程，原来是把自己的所有内容 复制给子进程，那么子进程呢，用一些新的代码 程序代码，把父进程拷贝过来的内容，给它覆盖掉 通过这样一个覆盖，实现了进程的执行代码的一个转换
+* wait 一个初级的一个同步操作 它能使得一个进程等待另外一个进程的结束
+* exit 用来终止一个进程的运行
