--- a/t26.md
+++ b/t26.md
@@ -28,6 +28,11 @@ CPU访问存储器(寄存器Register,缓存cache,主存RAM,辅存)时，(存/取
 字，也称为机器字，是计算机的CPU位宽
 按照编址方式计算机可以有字节编址和字编址两种，若是字节编址，则该计算机最小储存单位是字节，一般CPU访问物理内存时使用，若是字编址，则该计算机最小储存单元是字，一般访问逻辑内存时使用
 
+【关于主存中存储单元地址的分配】：
+”通常计算机即可按字寻址，也可按字节寻址。若按字节寻址，即它的每一个存储字包含n个可独立寻址的字节。“（拓展了原话）
+套用到本题：题目默认可按字节寻址，主存每个字块内有16个字，每个字32位——则主存中每个字块的每一个存储字都包含32位/8位=4个可独立寻址的字节，即这四个可独立寻址的字节需用2位二进制编码表示。
+字块内地址会锁定到该字块内某一存储字内可独立寻址字节的地址，编制每个字块内的16个存储字需要四位二进制数，再在这四位二进制数所指定的存储字内按字节寻址（如上，需要2位二进制编码），于是总共需编制6位二进制数。
+
 ### 命中率，访问效率
 
 ### cache的四种替换策略
