--- a/t30.md
+++ b/t30.md
@@ -105,3 +105,16 @@ if(head.val == val){
     return head;
 }
 ```
+
+
+## linkedList 末尾添加元素
+```java
+
+public Node add(Node head, int val) {
+if(head.next == null){
+    head.next = new Node(val);
+    return head;
+}else{
+    head.next = add(head.next, val);
+}
+return head;
