--- a/t36.md
+++ b/t36.md
@@ -20,3 +20,6 @@ alert(v1.vb); // 此时a为构造函数
 // alert(v1.vc); // undefined
 alert(v1.vd); // 此时a为构造函数
 ```
+
+用vc添加的属性，是属于构造函数a本身的属性。
+用vb,vd添加的属性是属于a对象的，是对象公有的。
