--- a/t37.md
+++ b/t37.md
@@ -63,9 +63,22 @@ function showMes(event){
 }
 ```
 
-总结：
 
-target.addEventListener(type,fn)    // 添加 DOM 2 级事件
+除了onclick事件可以通过click()方法进行事件触发外，其它事件并不能通过代码的方式进行触发。
+
+document.querySelector('#kw').onresize = function(){
+alert('onresize');
+}
+document.querySelector('#kw').resize(); 报错
+
+可以通过下面的方式触发：
+var myEvent = new Event('onresize'); 
+document.getElementById('kw').dispatchEvent(myEvent); // => true
+
+
+## 总结：
+
+target.addEventListener(type,fn)    // 添加 DOM 2 级事件, jquery封装为on
 type: 表示监听事件类型的字符串
 fn: 事件监听函数
 
